# xmp

./: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Manager.cpp  Manager.h  Socket.cpp  Socket.h  ThreadsafeQueue.h  xmplib.cpp  xmplib.hpp  xmplib.py  xmplib.rb
Doc/: LibRequirements.txt  README
Examples/: log.rb  replyserver.rb  start_example.sh
Examples/c++client/: CMakeLists.txt  client.cpp  client.h
Examples/pythonclient/: client.py
Examples/rubyclient/: client.rb
Tests/Functionality/: CMakeLists.txt  RequestReply.rb  RequestRound.cpp  RequestRound.h  python.py
Tests/Performance/: RandomMessages.cpp
src/: Log.cpp  Log.h
tinyxml++/: CMakeLists.txt  ticpp.cpp  ticpp.h  ticpprc.h  tinyxml.h
